--- a/railway.toml
+++ b/railway.toml
@@ -5,8 +5,5 @@ startCommand = "npm start"
 builder = "nixpacks"
 
 [variables]
-MONGO_URI = mongodb+srv://admin:1234@cluster0.i6dv4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET = 20010424PMLMP#
-PORT = 5000
-EMAIL_PASSWORD = abxn cxgg exnh wkuf
-EMAIL = lakshithamadushan20010@gmail.com
+MONGO_URI=mongodb+srv://admin:1234@cluster0.i6dv4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=20010424PMLMP#
